--- a/sass/main.css
+++ b/sass/main.css
@@ -156,6 +156,12 @@ body {
   }
 }
 
+@media (max-width: 37.5em) {
+  body {
+    padding: 0;
+  }
+}
+
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -193,7 +199,7 @@ body {
 @media (max-width: 37.5em) {
   .heading-primary--main {
     letter-spacing: 1rem;
-    font-size: 5rem;
+    font-size: 4rem;
   }
 }
 
